--- a/public/index.html
+++ b/public/index.html
@@ -57,14 +57,14 @@
 
         <div class="container">
           <a href="projects.html" target="_blank">
-            <img src="./assets/pictures/work2.jpg" class="image" class="mx-auto d-block img-fluid img-hover"
-              alt="project-one-dinner" />
+            <img src="./css/pictures/work2.jpg" class="image" class="mx-auto d-block img-fluid img-hover"
+              alt="work-hard" />
           </a>
           <div class="middle">
             <h2>WORK DELIGENTLY </h2>
-            <a href="projects.html">
+            <a href="/projects">
               
-              <button class=" button button-rounded-hover">MY WORK </button>
+              <button class=" button pr-btn button-rounded-hover">MY WORK </button>
             </a>
           </div>
 
@@ -74,14 +74,14 @@
         <!-- <div class= "card"> -->
         <div class="container">
 
-          <img src="./assets/pictures/play2.jpg" class="image" class="mx-auto d-block img-fluid img-hover"
-            alt="project-one-dinner" />
+          <img src="./css/pictures/play2.jpg" class="image" class="mx-auto d-block img-fluid img-hover"
+            alt="play-hard" />
 
           <div class="middle">
             <h2>PLAY JOYOUSLY </h2>
-            <a href="BTVu.html">
+            <a href="/aboutme">
               
-              <button class=" button button-rounded-hover">ABOUT ME </button>
+              <button class=" button about-me button-rounded-hover">ABOUT ME </button>
             </a>
           </div>
         </div>
