--- a/public/projects.html
+++ b/public/projects.html
@@ -23,7 +23,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Portfolio</title>
   </head>
 
@@ -60,8 +60,8 @@
       <div class="cell small-12 medium-6 large-8">
         <div class="container project-1" style="padding: 0.5em">
           <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
-            <img src="./assets/pictures/Kiss.png" class="image" style="width:100%"
-              class="mx-auto d-block img-fluid img-hover" alt="project-one-dinner" />
+            <img src="./css/pictures/Kiss.png" class="image" style="width:100%"
+              class="mx-auto d-block img-fluid img-hover" alt="kiss-project" />
           </a>
           <div class="middle">
             <a href="https://big-burger-kissingbooth.herokuapp.com/">
@@ -90,7 +90,7 @@
         <div class="cell small-12 medium-6 large-8">
           <div class="container project-1" style="padding: 0.5em">
             <a href="https://vubao2303.github.io/Project-1/" target="_blank">
-              <img src="./assets/pictures/Dinner.png" class="image" style="width:100%"
+              <img src="./css/pictures/Dinner.png" class="image" style="width:100%"
                 class="mx-auto d-block img-fluid img-hover" alt="project-one-dinner" />
             </a>
             <div class="middle">
@@ -118,7 +118,7 @@
         <div class="cell small-12 medium-6 large-8">
           <div class="container project-1" style="padding: 0.5em">
             <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
-              <img src="./assets/pictures/weather.png" class="image" style="width:100%"
+              <img src="./css/pictures/weather.png" class="image" style="width:100%"
                 class="mx-auto d-block img-fluid img-hover" alt="project-one-dinner" />
             </a>
             <div class="middle">
@@ -147,7 +147,7 @@
         <div class="cell small-12 medium-6 large-8">
           <div class="container project-1" style="padding: 0.5em">
             <a href="https://vubao2303.github.io/working-9to5/" target="_blank">
-              <img src="./assets/pictures/workday.png" class="image" style="width:100%"
+              <img src="./css/pictures/workday.png" class="image" style="width:100%"
                 class="mx-auto d-block img-fluid img-hover" alt="project-one-dinner" />
             </a>
             <div class="middle">
