linked correct css path and delete allBs photo

--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,7 @@
 
       
       <a class="footer-link"
-      href="./assets/Resume.pdf" download>
+      href="./css/Resume.pdf" download>
         Résumé
       </a>
       
