--- a/public/projects.html
+++ b/public/projects.html
@@ -176,7 +176,7 @@
   <footer>
     <div class="text-center">
       <a class="footer-link" href="mailto:bbvut@gmail.com" class="contact-info">Contact Me</a>
-      <a class="footer-link" href="./assets/Resume.pdf" download>
+      <a class="footer-link" href="./css/Resume.pdf" download>
         Résumé
       </a>
 
