--- a/public/BTVu.html
+++ b/public/BTVu.html
@@ -21,7 +21,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> 
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Portfolio</title>
 </head>
 
@@ -48,7 +48,7 @@
   <section class="about-me-page">
     <div class="grid-x grid-padding-x" style="margin-top: 4em; margin-bottom:4em; margin-left:3em; margin-right:3em">
       <div class="cell small-12 medium-6 large-6">
-        <img src="./assets/pictures/IMG_1552.jpeg" alt="picture of B" class="image" style="width:100%"/>    
+        <img src="./css/pictures/IMG_1552.jpeg" alt="picture of B" class="image" style="width:100%"/>    
       </div>
       <div class="cell small-12 medium-6 large-6" style="margin-top: 10px;">
         <p class="p-description"> I love learning and evolving and challenging myself with different aspects of life.
@@ -64,14 +64,12 @@
       </div> 
     </div>
   </section>
-  <section>
-    <img src="./assets/pictures/allBs.png" alt="picture of B" class="image" style="width:100%"/> 
-  </section>
+
   <footer>
     <div class="text-center">
       <a class="footer-link" href="mailto:bbvut@gmail.com" class="contact-info">Contact Me</a>
       <a class="footer-link"
-      href="./assets/Resume.pdf" download>
+      href="./css/Resume.pdf" download>
         Résumé
       </a>
     </div>
