fix speeling errors for projects

--- a/public/projects.html
+++ b/public/projects.html
@@ -23,7 +23,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+<!-- toggle  -->
+    <link rel="stylesheet" href="css/style.css">
     <title>Portfolio</title>
   </head>
 
@@ -61,7 +62,7 @@
         <div class="container project-1" style="padding: 0.5em">
           <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
             <img src="./css/pictures/Kiss.png" class="image" style="width:100%"
-              class="mx-auto d-block img-fluid img-hover" alt="kiss-project" />
+              class="mx-auto d-block img-fluid img-hover" alt="kissing-booth" />
           </a>
           <div class="middle">
             <a href="https://big-burger-kissingbooth.herokuapp.com/">
@@ -71,10 +72,7 @@
         </div>
       </div>
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-        <p class="p-description">You are in for a treat! It is Covid-season so our speak-easy-kissing booth is hiding as
-          a burger shop. Using MySQL, Node, Express, Handlebars and ORM to create a Kissing Booth app where you can add
-          a name of someone you want to kiss, kiss that person again, or delete that person's name after you are done
-          kissing them. Let's migle!
+        <p class="p-description">You are in for a treat! It is Covid-season so our speak-easy-kissing booth is hiding as a burger shop. Using MySQL, Node, Express, Handlebars and ORM to create a Kissing Booth app where you can add a name of someone you want to kiss, kiss that person again, or delete that person's name after you are done kissing them. Let's mingle!
           <br />
           <a href="https://github.com/vubao2303/big-burger">GITHUB LINK</a>
         </p>
@@ -101,11 +99,7 @@
           </div>
         </div>
         <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-          <p class="p-description"> As a person who needs to eat everyday, I would like some help with cooking or
-            deciding what to eat. I want to have many choices of recipes, and when I can't decide on what to eat I will
-            have a chance to pick a random recipe. On the day I don't feel like cooking or following recipes, I want to
-            go out to eat, or in this COVID-19 seasons, get some to-go food from restaurant near me. There are buttons
-            for me to click to choose the top ten restaurant in my city.
+          <p class="p-description"> As a person who needs to eat everyday, I would like some help with cooking or deciding what to eat. I want to have many choices of recipes, and when I can't decide on what to eat I will have a chance to pick a random recipe. On the day I don't feel like cooking or following recipes, I want to go out to eat, or in this COVID-19 season, get some to-go food from a restaurant near me. There are buttons for me to click to choose the top ten restaurants in my city.
             <br /><a href="https://github.com/vubao2303/Project-1">GITHUBLINK</a>
           </p>
         </div>
@@ -119,7 +113,7 @@
           <div class="container project-1" style="padding: 0.5em">
             <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
               <img src="./css/pictures/weather.png" class="image" style="width:100%"
-                class="mx-auto d-block img-fluid img-hover" alt="project-one-dinner" />
+                class="mx-auto d-block img-fluid img-hover" alt="forcast-weather" />
             </a>
             <div class="middle">
               <a href="https://vubao2303.github.io/weather-dashboard/">
@@ -129,13 +123,7 @@
           </div>
         </div>
         <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-          <p class="p-description"> Using data from OpenWeather API to build a weather dashboard that allows user to
-            search for a city to
-            check its current and future weather conditions. The weather board presents the current date, city name,
-            temperature, humidity, wind speed, and UV index, which colors are coded with its condition. There are also
-            5-day forecast that includes future dates, weather conditions' icons, tempertures, and humidity. Users can
-            also see search history in the history table on the left side of the page. Let's find some sunny city and
-            fly there!
+          <p class="p-description"> Using data from OpenWeather API to build a weather dashboard that allows user to search for a city to check its current and future weather conditions. The weather board presents the current date, city name, temperature, humidity, wind speed, and UV index, which colors are coded with its condition. There are also 5-day forecast that includes future dates, weather conditions' icons, temperatures, and humidity. Users can also see search history in the history table on the left side of the page. Let's find some sunny city and fly there!
             <br />
             <a href="https://github.com/vubao2303/weather-dashboard">GITHUB LINK</a>
           </p>
@@ -148,7 +136,7 @@
           <div class="container project-1" style="padding: 0.5em">
             <a href="https://vubao2303.github.io/working-9to5/" target="_blank">
               <img src="./css/pictures/workday.png" class="image" style="width:100%"
-                class="mx-auto d-block img-fluid img-hover" alt="project-one-dinner" />
+                class="mx-auto d-block img-fluid img-hover" alt="day-calender" />
             </a>
             <div class="middle">
               <a href="https://vubao2303.github.io/working-9to5/">
@@ -158,10 +146,7 @@
           </div>
         </div>
         <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-          <p class="p-description"> Day Calender to those who have a busy schedule. This page provide a page with
-            current date and time to
-            create schedule using time blocks align with work hours from 9:00-17:00. Past hours will turn grey while
-            future ones are in mint colore and present hour is red. Schedule are saved until detete! Let's get bee-zzzz
+          <p class="p-description"> Day Calendar to those who have a busy schedule. This page provides a page with the current date and time to create a schedule using time blocks aligned with work hours from 9:00-17:00. Past hours will turn grey while future ones are in mint color and the present hour is red. Schedules are saved until deleted! Let's get bee-zzzz !
             !
             <br />
             <a href="https://github.com/vubao2303/working-9to5">GITHUB LINK</a>
@@ -176,7 +161,7 @@
   <footer>
     <div class="text-center">
       <a class="footer-link" href="mailto:bbvut@gmail.com" class="contact-info">Contact Me</a>
-      <a class="footer-link" href="./css/Resume.pdf" download>
+      <a class="footer-link" href="./assets/Resume.pdf" download>
         Résumé
       </a>
 
