add active link to client side javascript

--- a/public/bmess.html
+++ b/public/bmess.html
@@ -304,7 +304,7 @@
           a name of someone you want to kiss, kiss that person again, or delete that person's name after you are done
           kissing them. Let's migle!
           <br />
-          <a href="https://github.com/vubao2303/big-burger">GITHUB LINK</a>
+          <span id="kb-link">GITHUB LINK</span>
         </p>
 
       </div>
