--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
             <h2>WORK DELIGENTLY </h2>
             <!-- <a href="/projects"> -->
               
-              <button class=" button pr-btn button-rounded-hover">MY WORK </button>
+              <button id="projects-btn" class=" button  button-rounded-hover">MY WORK </button>
             <!-- </a> -->
           </div>
 
