change link to LinkedIn

--- a/public/projects.html
+++ b/public/projects.html
@@ -37,7 +37,7 @@
     <ul class="nav flex-nowrap" id="top-nav-links">
       <!-- add linkedin page -->
       <li class="nav-item">
-        <a href="https://www.linkedin.com/in/b-tram-vu-866250121/"><i
+        <a href="https://www.linkedin.com/in/b-tram-vu/"><i
             class="fa fa-linkedin fa_custom fa-3x social"></i></a>
       </li>
       <!-- add github page -->
