add react projects

--- a/public/BTVu.html
+++ b/public/BTVu.html
@@ -117,11 +117,7 @@
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
               About Me
             </button>
-            <ul style= "margin-left: 20px" class=" p-description dropdown-menu" aria-labelledby="dropdownMenuButton1"> I graduated with double majored in Liberal Studies and Social Behavior, but afterbackpacking around 30 countries, I realized that technology and computer science are taking over the
-              world. Everyone is looking for the newestdevelopments and with them comes the creativeness and valuable
-              tools. I want tobe part of the technology evolution to help shape the world into a more modernand productive
-              environment or at the very least, understand the concept ofthis digital world that the future will soon
-              mostly be built on.  </ul>
+            <ul style= "margin-left: 20px" class=" p-description dropdown-menu" aria-labelledby="dropdownMenuButton1"> I graduated with double majored in Liberal Studies and Social Behavior, but after backpacking around 30 countries, I realized that technology and computer science are taking over the world. Everyone is looking for the newest developments and with them comes the creativeness and valuable tools. I want to be part of the technology evolution to help shape the world into a more modern and productive environment or at the very least, understand the concept of this digital world that the future will soon mostly be built on.  </ul>
           </div>
           <br/>
 
