--- a/public/projects.html
+++ b/public/projects.html
@@ -55,13 +55,88 @@
   <!-- add container -->
   <section>
     <!-- Infor START HERE  -->
+    <div class="grid-x grid-padding-x">
+      <div class="cell small-12 medium-6 large-8">
+        <div class="container Empolyees Directory" style="padding: 0.5em">
+          <a href="https://github.com/vubao2303/employee-directory" target="_blank">
+            <img src="./css/pictures/employees.png" class="image" style="width:100%"
+              class="mx-auto d-block img-fluid img-hover" alt="Empolyees" />
+          </a>
+          <div class="middle">
+            <a href="https://vubao2303.github.io/employee-directory/">
+              <h2>SEE LIVE SITE</h2>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
+        <p class="p-description">Using react to create an employee directory. The page is populated with employees' images, names, phone numbers, email, and day of birth. The search bar allows user to look up employees name and when the name column is clicked, employees' names will be sort in alphabetical order.
+          <br />
+          <a href="https://github.com/vubao2303/employee-directory">GITHUB LINK</a>
+        </p>
+
+      </div>
+    </div>
+    <br />
+
+    <!-- another projec here  -->
+    <div class="grid-x grid-padding-x">
+      <div class="cell small-12 medium-6 large-8">
+        <div class="container Rose" style="padding: 0.5em">
+          <a href="https://vubao2303.github.io/twice-you-die/" target="_blank">
+            <img src="./css/pictures/Rose.png" class="image" style="width:100%"
+              class="mx-auto d-block img-fluid img-hover" alt="roses" />
+          </a>
+          <div class="middle">
+            <a href="https://big-burger-kissingbooth.herokuapp.com/">
+              <h2>SEE LIVE SITE</h2>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
+        <p class="p-description">If you click twice, you die! This is a react based brain teaser web application that allows you to test your memorization. The object of the game is to click on only one image once. If you repeat guesses, the poisonous  thorns from the roses kill you and the score is reset to 0.
+          <br />
+          <a href="https://vubao2303.github.io/twice-you-die/">GITHUB LINK</a>
+        </p>
+
+      </div>
+    </div>
+    <br />
+
+     <!-- PROJECT 1 -->
+     <div class="grid-x grid-padding-x">
+      <div class="cell small-12 medium-6 large-8">
+        <div class="container project-1" style="padding: 0.5em">
+          <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
+            <img src="./css/pictures/Kiss.png" class="image" style="width:100%"
+              class="mx-auto d-block img-fluid img-hover" alt="kissing-booth" />
+          </a>
+          <div class="middle">
+            <a href="https://big-burger-kissingbooth.herokuapp.com/">
+              <h2>SEE LIVE SITE</h2>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
+        <p class="p-description">You are in for a treat! It is Covid-season so our speak-easy-kissing booth is hiding as a burger shop. Using MySQL, Node, Express, Handlebars and ORM to create a Kissing Booth app where you can add a name of someone you want to kiss, kiss that person again, or delete that person's name after you are done kissing them. Let's mingle!
+          <br />
+          <a href="https://github.com/vubao2303/big-burger">GITHUB LINK</a>
+        </p>
+
+      </div>
+    </div>
+    <br />
+
+
     <!-- start foundation template  -->
     <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
         <div class="container project-1" style="padding: 0.5em">
           <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
             <img src="./css/pictures/partyX.png" class="image" style="width:100%"
-              class="mx-auto d-block img-fluid img-hover" alt="kissing-booth" />
+              class="mx-auto d-block img-fluid img-hover" alt="balloon-and-form" />
           </a>
           <div class="middle">
             <a href="https://party-x.herokuapp.com/">
@@ -110,20 +185,20 @@
       <div class="grid-x grid-padding-x">
         <div class="cell small-12 medium-6 large-8">
           <div class="container project-1" style="padding: 0.5em">
-            <a href="https://vubao2303.github.io/Project-1/" target="_blank">
+            <a href="https://github.com/vubao2303/excercise-tracking" target="_blank">
               <img src="./css/pictures/Dinner.png" class="image" style="width:100%"
-                class="mx-auto d-block img-fluid img-hover" alt="project-one-dinner" />
+                class="mx-auto d-block img-fluid img-hover" alt="Fitness-Tracker" />
             </a>
             <div class="middle">
-              <a href="https://vubao2303.github.io/Project-1/">
+              <a target="_blank" href="https://b-workout.herokuapp.com/?id=60332a1195b3680015132e88">
                 <h2>SEE LIVE SITE</h2>
               </a>
             </div>
           </div>
         </div>
         <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-          <p class="p-description"> As a person who needs to eat everyday, I would like some help with cooking or deciding what to eat. I want to have many choices of recipes, and when I can't decide on what to eat I will have a chance to pick a random recipe. On the day I don't feel like cooking or following recipes, I want to go out to eat, or in this COVID-19 season, get some to-go food from a restaurant near me. There are buttons for me to click to choose the top ten restaurants in my city.
-            <br /><a href="https://github.com/vubao2303/Project-1">GITHUBLINK</a>
+          <p class="p-description"> An Excerise Tracker application that is built using MongoDB. The application allows a user to track their workout routine by adding exercise types, resistance or cardio, followed by data for each including sets, reps, distance, etc. The user can add multiple exercises to one workout, and their statistics will be generated showing the total duration, total reps, total sets. Data for the last 7 workouts will also be displayed which provide another visual representation in addition to their physique to track progress over time
+            <br /><a target="_blank" href="https://github.com/vubao2303/excercise-tracking">GITHUBLINK</a>
           </p>
         </div>
 
