add target blank to open link in a new tab

--- a/public/BTVu.html
+++ b/public/BTVu.html
@@ -36,12 +36,12 @@
     <ul class="nav flex-nowrap" id="top-nav-links">
       <!-- add linkedin page -->
       <li class="nav-item">
-        <a href="https://www.linkedin.com/in/b-tram-vu/"><i
+        <a target="_blank" href="https://www.linkedin.com/in/b-tram-vu/"><i
             class="fa fa-linkedin fa_custom fa-3x social"></i></a>
       </li>
       <!-- add github page -->
       <li class="nav-item">
-        <a href="https://github.com/vubao2303"><i id="social-em" class="fab fa-github-square fa-3x social"></i></a>
+        <a target="_blank" href="https://github.com/vubao2303"><i id="social-em" class="fab fa-github-square fa-3x social"></i></a>
       </li>
     </ul>
   </nav>
