--- a/public/projects.html
+++ b/public/projects.html
@@ -37,12 +37,12 @@
     <ul class="nav flex-nowrap" id="top-nav-links">
       <!-- add linkedin page -->
       <li class="nav-item">
-        <a href="https://www.linkedin.com/in/b-tram-vu/"><i
+        <a target="_blank" href="https://www.linkedin.com/in/b-tram-vu/"><i
             class="fa fa-linkedin fa_custom fa-3x social"></i></a>
       </li>
       <!-- add github page -->
       <li class="nav-item">
-        <a href="https://github.com/vubao2303"><i id="social-em" class="fab fa-github-square fa-3x social"></i></a>
+        <a target="_blank" href="https://github.com/vubao2303"><i id="social-em" class="fab fa-github-square fa-3x social"></i></a>
       </li>
     </ul>
   </nav>
@@ -63,7 +63,7 @@
               class="mx-auto d-block img-fluid img-hover" alt="Empolyees" />
           </a>
           <div class="middle">
-            <a href="https://vubao2303.github.io/employee-directory/">
+            <a target="_blank" href="https://vubao2303.github.io/employee-directory/">
               <h2>SEE LIVE SITE</h2>
             </a>
           </div>
@@ -72,7 +72,7 @@
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
         <p class="p-description">Using react to create an employee directory. The page is populated with employees' images, names, phone numbers, email, and day of birth. The search bar allows user to look up employees name and when the name column is clicked, employees' names will be sort in alphabetical order.
           <br />
-          <a href="https://github.com/vubao2303/employee-directory">GITHUB LINK</a>
+          <a target="_blank" href="https://github.com/vubao2303/employee-directory">GITHUB LINK</a>
         </p>
 
       </div>
@@ -88,7 +88,7 @@
               class="mx-auto d-block img-fluid img-hover" alt="roses" />
           </a>
           <div class="middle">
-            <a href="https://big-burger-kissingbooth.herokuapp.com/">
+            <a target="_blank" href="https://vubao2303.github.io/twice-you-die/">
               <h2>SEE LIVE SITE</h2>
             </a>
           </div>
@@ -97,7 +97,7 @@
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
         <p class="p-description">If you click twice, you die! This is a react based brain teaser web application that allows you to test your memorization. The object of the game is to click on only one image once. If you repeat guesses, the poisonous  thorns from the roses kill you and the score is reset to 0.
           <br />
-          <a href="https://vubao2303.github.io/twice-you-die/">GITHUB LINK</a>
+          <a target="_blank" href="https://github.com/vubao2303/twice-you-die">GITHUB LINK</a>
         </p>
 
       </div>
@@ -108,21 +108,21 @@
      <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
         <div class="container project-1" style="padding: 0.5em">
-          <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
-            <img src="./css/pictures/Kiss.png" class="image" style="width:100%"
+          <a href="https://github.com/vubao2303/excercise-tracking" target="_blank">
+            <img src="./css/pictures/mongoFitness.png" class="image" style="width:100%"
               class="mx-auto d-block img-fluid img-hover" alt="kissing-booth" />
           </a>
           <div class="middle">
-            <a href="https://big-burger-kissingbooth.herokuapp.com/">
+            <a target="_blank" href="https://b-workout.herokuapp.com/?id=60332a1195b3680015132e88">
               <h2>SEE LIVE SITE</h2>
             </a>
           </div>
         </div>
       </div>
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-        <p class="p-description">You are in for a treat! It is Covid-season so our speak-easy-kissing booth is hiding as a burger shop. Using MySQL, Node, Express, Handlebars and ORM to create a Kissing Booth app where you can add a name of someone you want to kiss, kiss that person again, or delete that person's name after you are done kissing them. Let's mingle!
+        <p class="p-description">An Excerise Tracker application that is built using MongoDB. The application allows a user to track their workout routine by adding exercise types, resistance or cardio, followed by data for each including sets, reps, distance, etc. The user can add multiple exercises to one workout, and their statistics will be generated showing the total duration, total reps, total sets. Data for the last 7 workouts will also be displayed which provide another visual representation in addition to their physique to track progress over time.
           <br />
-          <a href="https://github.com/vubao2303/big-burger">GITHUB LINK</a>
+          <a target="_blank" href="https://github.com/vubao2303/excercise-tracking">GITHUB LINK</a>
         </p>
 
       </div>
@@ -134,12 +134,12 @@
     <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
         <div class="container project-1" style="padding: 0.5em">
-          <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
+          <a href="https://github.com/vubao2303/Project-2" target="_blank">
             <img src="./css/pictures/partyX.png" class="image" style="width:100%"
               class="mx-auto d-block img-fluid img-hover" alt="balloon-and-form" />
           </a>
           <div class="middle">
-            <a href="https://party-x.herokuapp.com/">
+            <a target="_blank" href="https://party-x.herokuapp.com/">
               <h2>SEE LIVE SITE</h2>
             </a>
           </div>
@@ -148,7 +148,7 @@
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
         <p class="p-description">This full stack application built using MVC framework is a major milestone in the progression of four fledgling developers. Together we created an application that allows a user to create an account and login to an account dashboard. The dashboard will show the user a list of events that they can attend, view the upcomming events, and create events of their own.
           <br />
-          <a href="https://github.com/vubao2303/Project-2">GITHUB LINK</a>
+          <a target="_blank" href="https://github.com/vubao2303/Project-2">GITHUB LINK</a>
         </p>
 
       </div>
@@ -163,7 +163,7 @@
               class="mx-auto d-block img-fluid img-hover" alt="kissing-booth" />
           </a>
           <div class="middle">
-            <a href="https://big-burger-kissingbooth.herokuapp.com/">
+            <a target="_blank" href="https://big-burger-kissingbooth.herokuapp.com/">
               <h2>SEE LIVE SITE</h2>
             </a>
           </div>
@@ -172,7 +172,7 @@
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
         <p class="p-description">You are in for a treat! It is Covid-season so our speak-easy-kissing booth is hiding as a burger shop. Using MySQL, Node, Express, Handlebars and ORM to create a Kissing Booth app where you can add a name of someone you want to kiss, kiss that person again, or delete that person's name after you are done kissing them. Let's mingle!
           <br />
-          <a href="https://github.com/vubao2303/big-burger">GITHUB LINK</a>
+          <a target="_blank" href="https://github.com/vubao2303/big-burger">GITHUB LINK</a>
         </p>
 
       </div>
@@ -185,12 +185,12 @@
       <div class="grid-x grid-padding-x">
         <div class="cell small-12 medium-6 large-8">
           <div class="container project-1" style="padding: 0.5em">
-            <a href="https://github.com/vubao2303/excercise-tracking" target="_blank">
+            <a href="https://github.com/vubao2303/Project-1" target="_blank">
               <img src="./css/pictures/Dinner.png" class="image" style="width:100%"
                 class="mx-auto d-block img-fluid img-hover" alt="Fitness-Tracker" />
             </a>
             <div class="middle">
-              <a target="_blank" href="https://b-workout.herokuapp.com/?id=60332a1195b3680015132e88">
+              <a target="_blank" href="https://vubao2303.github.io/Project-1/">
                 <h2>SEE LIVE SITE</h2>
               </a>
             </div>
@@ -198,36 +198,14 @@
         </div>
         <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
           <p class="p-description"> An Excerise Tracker application that is built using MongoDB. The application allows a user to track their workout routine by adding exercise types, resistance or cardio, followed by data for each including sets, reps, distance, etc. The user can add multiple exercises to one workout, and their statistics will be generated showing the total duration, total reps, total sets. Data for the last 7 workouts will also be displayed which provide another visual representation in addition to their physique to track progress over time
-            <br /><a target="_blank" href="https://github.com/vubao2303/excercise-tracking">GITHUBLINK</a>
+            <br /><a target="_blank" href="https://github.com/vubao2303/Project-1">GITHUBLINK</a>
           </p>
         </div>
 
       </div>
 
 
-      <!-- project 3 row -->
-      <div class="grid-x grid-padding-x">
-        <div class="cell small-12 medium-6 large-8">
-          <div class="container project-1" style="padding: 0.5em">
-            <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
-              <img src="./css/pictures/weather.png" class="image" style="width:100%"
-                class="mx-auto d-block img-fluid img-hover" alt="forcast-weather" />
-            </a>
-            <div class="middle">
-              <a href="https://vubao2303.github.io/weather-dashboard/">
-                <h2>SEE LIVE SITE</h2>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-          <p class="p-description"> Using data from OpenWeather API to build a weather dashboard that allows user to search for a city to check its current and future weather conditions. The weather board presents the current date, city name, temperature, humidity, wind speed, and UV index, which colors are coded with its condition. There are also 5-day forecast that includes future dates, weather conditions' icons, temperatures, and humidity. Users can also see search history in the history table on the left side of the page. Let's find some sunny city and fly there!
-            <br />
-            <a href="https://github.com/vubao2303/weather-dashboard">GITHUB LINK</a>
-          </p>
-
-        </div>
-      </div>
+      
       <!-- Project 4 -->
       <div class="grid-x grid-padding-x">
         <div class="cell small-12 medium-6 large-8">
@@ -237,7 +215,7 @@
                 class="mx-auto d-block img-fluid img-hover" alt="day-calender" />
             </a>
             <div class="middle">
-              <a href="https://vubao2303.github.io/working-9to5/">
+              <a target="_blank" href="https://vubao2303.github.io/working-9to5/">
                 <h2>SEE LIVE SITE</h2>
               </a>
             </div>
@@ -247,7 +225,7 @@
           <p class="p-description"> Day Calendar to those who have a busy schedule. This page provides a page with the current date and time to create a schedule using time blocks aligned with work hours from 9:00-17:00. Past hours will turn grey while future ones are in mint color and the present hour is red. Schedules are saved until deleted! Let's get bee-zzzz !
             !
             <br />
-            <a href="https://github.com/vubao2303/working-9to5">GITHUB LINK</a>
+            <a target="_blank" href="https://github.com/vubao2303/working-9to5">GITHUB LINK</a>
           </p>
 
         </div>
