change resume link

--- a/public/projects.html
+++ b/public/projects.html
@@ -23,7 +23,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-<!-- toggle  -->
+    <!-- toggle  -->
     <link rel="stylesheet" href="css/style.css">
     <title>Portfolio</title>
   </head>
@@ -42,7 +42,8 @@
       </li>
       <!-- add github page -->
       <li class="nav-item">
-        <a target="_blank" href="https://github.com/vubao2303"><i id="social-em" class="fab fa-github-square fa-3x social"></i></a>
+        <a target="_blank" href="https://github.com/vubao2303"><i id="social-em"
+            class="fab fa-github-square fa-3x social"></i></a>
       </li>
     </ul>
   </nav>
@@ -70,7 +71,9 @@
         </div>
       </div>
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-        <p class="p-description">Using react to create an employee directory. The page is populated with employees' images, names, phone numbers, email, and day of birth. The search bar allows user to look up employees name and when the name column is clicked, employees' names will be sort in alphabetical order.
+        <p class="p-description">Using react to create an employee directory. The page is populated with employees'
+          images, names, phone numbers, email, and day of birth. The search bar allows user to look up employees name
+          and when the name column is clicked, employees' names will be sort in alphabetical order.
           <br />
           <a target="_blank" href="https://github.com/vubao2303/employee-directory">GITHUB LINK</a>
         </p>
@@ -95,7 +98,9 @@
         </div>
       </div>
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-        <p class="p-description">If you click twice, you die! This is a react based brain teaser web application that allows you to test your memorization. The object of the game is to click on only one image once. If you repeat guesses, the poisonous  thorns from the roses kill you and the score is reset to 0.
+        <p class="p-description">If you click twice, you die! This is a react based brain teaser web application that
+          allows you to test your memorization. The object of the game is to click on only one image once. If you repeat
+          guesses, the poisonous  thorns from the roses kill you and the score is reset to 0.
           <br />
           <a target="_blank" href="https://github.com/vubao2303/twice-you-die">GITHUB LINK</a>
         </p>
@@ -104,8 +109,8 @@
     </div>
     <br />
 
-     <!-- PROJECT 1 -->
-     <div class="grid-x grid-padding-x">
+    <!-- PROJECT 1 -->
+    <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
         <div class="container project-1" style="padding: 0.5em">
           <a href="https://github.com/vubao2303/excercise-tracking" target="_blank">
@@ -120,7 +125,12 @@
         </div>
       </div>
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-        <p class="p-description">An Excerise Tracker application that is built using MongoDB. The application allows a user to track their workout routine by adding exercise types, resistance or cardio, followed by data for each including sets, reps, distance, etc. The user can add multiple exercises to one workout, and their statistics will be generated showing the total duration, total reps, total sets. Data for the last 7 workouts will also be displayed which provide another visual representation in addition to their physique to track progress over time.
+        <p class="p-description">An Excerise Tracker application that is built using MongoDB. The application allows a
+          user to track their workout routine by adding exercise types, resistance or cardio, followed by data for each
+          including sets, reps, distance, etc. The user can add multiple exercises to one workout, and their statistics
+          will be generated showing the total duration, total reps, total sets. Data for the last 7 workouts will also
+          be displayed which provide another visual representation in addition to their physique to track progress over
+          time.
           <br />
           <a target="_blank" href="https://github.com/vubao2303/excercise-tracking">GITHUB LINK</a>
         </p>
@@ -146,7 +156,10 @@
         </div>
       </div>
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-        <p class="p-description">This full stack application built using MVC framework is a major milestone in the progression of four fledgling developers. Together we created an application that allows a user to create an account and login to an account dashboard. The dashboard will show the user a list of events that they can attend, view the upcomming events, and create events of their own.
+        <p class="p-description">This full stack application built using MVC framework is a major milestone in the
+          progression of four fledgling developers. Together we created an application that allows a user to create an
+          account and login to an account dashboard. The dashboard will show the user a list of events that they can
+          attend, view the upcomming events, and create events of their own.
           <br />
           <a target="_blank" href="https://github.com/vubao2303/Project-2">GITHUB LINK</a>
         </p>
@@ -170,7 +183,10 @@
         </div>
       </div>
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-        <p class="p-description">You are in for a treat! It is Covid-season so our speak-easy-kissing booth is hiding as a burger shop. Using MySQL, Node, Express, Handlebars and ORM to create a Kissing Booth app where you can add a name of someone you want to kiss, kiss that person again, or delete that person's name after you are done kissing them. Let's mingle!
+        <p class="p-description">You are in for a treat! It is Covid-season so our speak-easy-kissing booth is hiding as
+          a burger shop. Using MySQL, Node, Express, Handlebars and ORM to create a Kissing Booth app where you can add
+          a name of someone you want to kiss, kiss that person again, or delete that person's name after you are done
+          kissing them. Let's mingle!
           <br />
           <a target="_blank" href="https://github.com/vubao2303/big-burger">GITHUB LINK</a>
         </p>
@@ -197,7 +213,12 @@
           </div>
         </div>
         <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-          <p class="p-description"> An Excerise Tracker application that is built using MongoDB. The application allows a user to track their workout routine by adding exercise types, resistance or cardio, followed by data for each including sets, reps, distance, etc. The user can add multiple exercises to one workout, and their statistics will be generated showing the total duration, total reps, total sets. Data for the last 7 workouts will also be displayed which provide another visual representation in addition to their physique to track progress over time
+          <p class="p-description"> An Excerise Tracker application that is built using MongoDB. The application allows
+            a user to track their workout routine by adding exercise types, resistance or cardio, followed by data for
+            each including sets, reps, distance, etc. The user can add multiple exercises to one workout, and their
+            statistics will be generated showing the total duration, total reps, total sets. Data for the last 7
+            workouts will also be displayed which provide another visual representation in addition to their physique to
+            track progress over time
             <br /><a target="_blank" href="https://github.com/vubao2303/Project-1">GITHUBLINK</a>
           </p>
         </div>
@@ -205,7 +226,7 @@
       </div>
 
 
-      
+
       <!-- Project 4 -->
       <div class="grid-x grid-padding-x">
         <div class="cell small-12 medium-6 large-8">
@@ -222,7 +243,10 @@
           </div>
         </div>
         <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-          <p class="p-description"> Day Calendar to those who have a busy schedule. This page provides a page with the current date and time to create a schedule using time blocks aligned with work hours from 9:00-17:00. Past hours will turn grey while future ones are in mint color and the present hour is red. Schedules are saved until deleted! Let's get bee-zzzz !
+          <p class="p-description"> Day Calendar to those who have a busy schedule. This page provides a page with the
+            current date and time to create a schedule using time blocks aligned with work hours from 9:00-17:00. Past
+            hours will turn grey while future ones are in mint color and the present hour is red. Schedules are saved
+            until deleted! Let's get bee-zzzz !
             !
             <br />
             <a target="_blank" href="https://github.com/vubao2303/working-9to5">GITHUB LINK</a>
@@ -238,7 +262,7 @@
   <footer>
     <div class="text-center">
       <a class="footer-link" href="mailto:bbvut@gmail.com" class="contact-info">Contact Me</a>
-      <a class="footer-link" href="./assets/Resume.pdf" download>
+      <a class="footer-link" href="./assets/B-Resume.pdf" download>
         Résumé
       </a>
 
