add prject 3 to portfolio

--- a/public/projects.html
+++ b/public/projects.html
@@ -55,6 +55,35 @@
   </header>
   <!-- add container -->
   <section>
+    <div class="grid-x grid-padding-x">
+      <div class="cell small-12 medium-6 large-8">
+        <div class="container Empolyees Directory" style="padding: 0.5em">
+          <a href="https://github.com/vubao2303/Project-3" target="_blank">
+            <img src="./css/pictures/Mnemosyne.png" class="image" style="width:100%"
+              class="mx-auto d-block img-fluid img-hover" alt="Empolyees" />
+          </a>
+          <div class="middle">
+            <a target="_blank" href="https://mnemosyne-3.herokuapp.com/">
+              <h2>SEE LIVE SITE</h2>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
+        <p class="p-description">Full stack React-app using Sequelize, MongoDB, Express, React, and Node.js to an
+          application that allows the user to create a yearbook for multiple classes. The user can login and create an
+          account within the application create a yearbook with multiple classes. Search for previously created
+          yearbooks they created by year and name. View students within a class. Edit yearbook data within the app.
+          <br />
+          <a target="_blank" href="https://github.com/vubao2303/Project-3">GITHUB LINK</a>
+        </p>
+
+      </div>
+    </div>
+    <br />
+
+
+
     <!-- Infor START HERE  -->
     <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
@@ -98,8 +127,9 @@
         </div>
       </div>
       <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-        <p class="p-description">If you click twice, you die! This is a react based brain teaser web application that
-          allows you to test your memorization. The object of the game is to click on only one image once. If you repeat
+        <p class="p-description"> This is a react based brain teaser web application that
+          allows you to test your memorization. If you click twice, you die! The object of the game is to click on only
+          one image once. If you repeat
           guesses, the poisonous  thorns from the roses kill you and the score is reset to 0.
           <br />
           <a target="_blank" href="https://github.com/vubao2303/twice-you-die">GITHUB LINK</a>
