--- a/public/projects.html
+++ b/public/projects.html
@@ -55,7 +55,7 @@
   </header>
   <!-- add container -->
   <section>
-    <div class="grid-x grid-padding-x">
+    <!-- <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
         <div class="container Empolyees Directory" style="padding: 0.5em">
           <a href="https://github.com/vubao2303/Project-3" target="_blank">
@@ -80,7 +80,7 @@
 
       </div>
     </div>
-    <br />
+    <br /> -->
 
 
 
