remove none working projects and update description for the working ones

--- a/public/projects.html
+++ b/public/projects.html
@@ -55,6 +55,7 @@
   </header>
   <!-- add container -->
   <section>
+    <!-- yearbook Project -->
     <!-- <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
         <div class="container Empolyees Directory" style="padding: 0.5em">
@@ -140,7 +141,8 @@
     <br />
 
     <!-- PROJECT 1 -->
-    <div class="grid-x grid-padding-x">
+    <!-- fitness Tracker  -->
+    <!-- <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
         <div class="container project-1" style="padding: 0.5em">
           <a href="https://github.com/vubao2303/excercise-tracking" target="_blank">
@@ -167,11 +169,12 @@
 
       </div>
     </div>
-    <br />
+    <br /> -->
 
 
     <!-- start foundation template  -->
-    <div class="grid-x grid-padding-x">
+    <!-- event X  -->
+    <!-- <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
         <div class="container project-1" style="padding: 0.5em">
           <a href="https://github.com/vubao2303/Project-2" target="_blank">
@@ -196,9 +199,10 @@
 
       </div>
     </div>
-    <br />
+    <br /> -->
     <!-- PROJECT 1 -->
-    <div class="grid-x grid-padding-x">
+    <!-- kissing Booth  -->
+    <!-- <div class="grid-x grid-padding-x">
       <div class="cell small-12 medium-6 large-8">
         <div class="container project-1" style="padding: 0.5em">
           <a href="https://vubao2303.github.io/weather-dashboard/" target="_blank">
@@ -223,7 +227,7 @@
 
       </div>
     </div>
-    <br />
+    <br /> -->
     <!-- project 2 rows  -->
 
     <div class="grid-x grid-padding-x" style="margin-top: 4em; margin-bottom:4em; margin-left:3em; margin-right:3em">
@@ -243,12 +247,11 @@
           </div>
         </div>
         <div class="cell small-12 medium-6 large-4" style="margin-top: 10px;">
-          <p class="p-description"> An Excerise Tracker application that is built using MongoDB. The application allows
-            a user to track their workout routine by adding exercise types, resistance or cardio, followed by data for
-            each including sets, reps, distance, etc. The user can add multiple exercises to one workout, and their
-            statistics will be generated showing the total duration, total reps, total sets. Data for the last 7
-            workouts will also be displayed which provide another visual representation in addition to their physique to
-            track progress over time
+          <p class="p-description"> As a person who needs to eat everyday, I would like some help with cooking or
+            deciding what to eat. I want to have many choices of recipes, and when I can't decide on what to eat I will
+            have a chance to pick a random recipe. On the day I don't feel like cooking or following recipes, I want to
+            go out to eat, or in this COVID-19 seasons, get some to go from restaurant near me, I will be present with
+            the top ten restaurant in my city.
             <br /><a target="_blank" href="https://github.com/vubao2303/Project-1">GITHUBLINK</a>
           </p>
         </div>
